# IAD

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app.py  coverage.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
docker/: Dockerfile  docker-compose.postgres.yml  entrypoint.sh
docker/grafana/dashboards/: iad-api-overview.json
docker/grafana/schemas/: datasource-provisioning.schema.json
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  MIGRATION.md  PHASE_1.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_13.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  trainmodel_logistic_regression.joblib
iad/: __init__.py
iad/backend/: __init__.py
iad/backend/api/: __init__.py  app.py  deps.py
iad/backend/database/: __init__.py  base.py  init_db.py  session.py
iad/backend/middleware/: __init__.py  csrf.py  prometheus.py  rate_limit.py  security_headers.py
iad/backend/models/: __init__.py  dataset.py  experiment.py  metric.py  ml_model.py  prediction.py  user.py
iad/backend/repositories/: __init__.py  base.py  dataset.py  experiment.py  metric.py  ml_model.py  prediction.py  unit_of_work.py  user.py
iad/backend/schemas/: __init__.py  auth.py  ml.py
iad/backend/security/: __init__.py  csrf.py  jwt_tokens.py  passwords.py  permissions.py  rate_limit.py  upload_policy.py
iad/backend/services/: __init__.py  auth_service.py  dataframe_io.py  dataset_upload_service.py  inference_service.py  ml_catalog_service.py  persistence_service.py  training_api_service.py
iad/config/: __init__.py  settings.py
iad/core/: __init__.py  error_handler.py  exceptions.py  logging.py  paths.py  validation.py
iad/core/observability/: __init__.py  health.py  performance.py  prometheus.py  sentry.py
iad/export/: __init__.py  automated.py  charts.py  docx.py  metrics_export.py  models.py  pdf.py  report_builder.py  service.py
iad/frontend/: __init__.py  routes.py  streamlit_compat.py
iad/frontend/assets/: __init__.py
iad/frontend/auth/: __init__.py  gate.py
iad/frontend/components/: __init__.py  alerts.py  charts.py  feedback.py  html_render.py  layouts.py  metric_cards.py  model_cards.py  navbar.py  pipeline.py  progress.py  tables.py  ui.py  uploaders.py
iad/frontend/layouts/: __init__.py  dashboard.py  page.py
iad/frontend/pages/: __init__.py
iad/frontend/performance/: __init__.py  background.py  streamlit_cache.py
iad/frontend/services/: __init__.py  api_client.py  context.py  dataset.py  training.py
iad/frontend/styles/: __init__.py  components.css  embed.css  streamlit-bridge.css  theme.py  tokens.css
iad/ml/: __init__.py
iad/ml/anomaly/: __init__.py  isolation_forest.py  one_class_svm.py  reports.py  service.py
iad/ml/automl/: __init__.py  base.py  flaml_adapter.py  pycaret_adapter.py
iad/ml/clustering/: __init__.py  availability.py  dbscan.py  kmeans.py  reduction.py  reports.py  service.py
iad/ml/evaluation/: __init__.py  metrics.py  reports.py
iad/ml/explainability/: __init__.py  lime_explainer.py  shap_explainer.py
iad/ml/forecasting/: __init__.py  arima.py  availability.py  decomposition.py  prepare.py  prophet_model.py  reports.py  service.py
iad/ml/nlp/: __init__.py  availability.py  embeddings.py  reports.py  sentiment.py  service.py  topics.py
iad/ml/preprocessing/: __init__.py  _dtypes.py  exceptions.py
iad/ml/recommendation/: __init__.py  collaborative.py  matrix.py  reports.py  service.py  similarity.py
iad/ml/tracking/: __init__.py  mlflow_tracker.py  runs.py
iad/ml/training/: __init__.py  persistence.py  registry.py  reports.py  reproducibility.py  serialize.py  service.py
iad/ml/tuning/: __init__.py  optuna_search.py  search_spaces.py
iad/performance/: __init__.py  dask_engine.py  fingerprints.py  jobs.py  lazy.py  loader.py  memory.py  polars_io.py
iad/services/: __init__.py
iad/state/: __init__.py  session.py
pages/: 1_Data_Loading.py  1_📥_Data_Loading.py  2_Descriptive_Analysis.py  2_📊_Descriptive_Analysis.py  3_Diagnostic_Analysis.py  3_🔍_Diagnostic_Analysis.py  4_Predictive_Modeling.py  4_🤖_Predictive_Modeling.py  5_Apply_Model.py  5_🎯_Apply_Model.py  6_Prescriptive_Analysis.py  6_💡_Prescriptive_Analysis.py  7_Advanced_Analytics.py  7_🧠_Advanced_Analytics.py  8_Export_Reports.py  8_📄_Export_Reports.py
scripts/: ci.sh  create_admin.py  db_init.py  format.sh  lint.sh  run_api.py  run_streamlit.py  run_tests.sh
src/: __init__.py  data_loader.py  descriptive.py  diagnostic.py  predictive.py  prescriptive.py  utils.py
tests/: conftest.py
tests/api/: test_auth_errors.py  test_auth_routes.py  test_health_and_errors.py  test_ml_routes.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  factories.py  streamlit_mock.py
tests/integration/: test_api_auth.py  test_legacy_smoke.py  test_log_prediction.py  test_persistence_training.py  test_phase2_pipeline.py  test_phase3_pipeline.py
tests/unit/: test_config.py  test_detect_task_type.py  test_error_handler.py  test_exceptions.py  test_logging.py  test_paths.py  test_session.py  test_validation.py
tests/unit/backend/: test_auth_service.py  test_database_session.py  test_middleware.py  test_ml_catalog_service.py  test_persistence_service.py  test_prometheus_middleware.py  test_repositories.py  test_security.py  test_training_api_infer.py  test_upload_policy.py
tests/unit/core/: test_observability.py  test_trusted_paths.py
tests/unit/export/: test_export.py
tests/unit/frontend/: test_api_client.py  test_background_jobs.py  test_components_streamlit.py  test_context_store.py  test_dataset_service.py  test_feedback.py  test_metric_cards.py  test_model_cards.py  test_streamlit_cache.py  test_streamlit_compat.py  test_tables_arrow.py  test_tables_empty.py  (+5 more)
(+76 files in other folders)
