[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iad"
version = "0.2.0"
description = "Intelligent Analytics & Data Science — production-grade ML SaaS platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "IAD Engineering" }]
keywords = ["data-science", "machine-learning", "streamlit", "mlops", "saas"]

# Runtime dependencies. Keep in sync with requirements.txt.
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "joblib>=1.3.0",
    "xlrd>=2.0.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "rich>=13.7",
    "pandera>=0.18,<1.0",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.5",
    "shap>=0.45",
    "lime>=0.2.0.1",
    "mlflow-skinny>=2.10",
    "flaml>=2.1",
    # Phase 6 — persistence
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # Phase 7 — API & security
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "httpx>=0.27",
    # Phase 8 — performance
    "polars>=0.20",
    "dask[dataframe]>=2024.4",
    # Phase 11 — NLP sentiment (lightweight lexicon)
    "vaderSentiment>=3.3",
    # Phase 12 — observability
    "prometheus-client>=0.20",
    "sentry-sdk>=2.0",
    # Phase 13 — export & reporting
    "reportlab>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
nlp = ["sentence-transformers>=2.7"]
forecasting = ["prophet>=1.1"]
clustering = ["umap-learn>=0.5"]
analytics = [
    "vaderSentiment>=3.3",
    "sentence-transformers>=2.7",
    "prophet>=1.1",
    "umap-learn>=0.5",
]
export = ["kaleido>=0.2"]  # Plotly PNG export (optional)
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-requests",
]

[project.urls]
Documentation = "./docs/ARCHITECTURE.md"

[tool.setuptools.packages.find]
include = ["iad*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=iad",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=85",
]
markers = [
    "unit: fast unit tests, no I/O",
    "integration: cross-module tests",
    "slow: long-running tests (excluded by default in CI quick lane)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["iad"]
omit = [
    "iad/*/__init__.py",
    # Pure Streamlit presentation — covered by manual smoke / E2E
    "iad/frontend/layouts/*",
    "iad/frontend/auth/*",
    "iad/frontend/components/layouts.py",
    "iad/frontend/components/uploaders.py",
    "iad/frontend/components/navbar.py",
    "iad/frontend/components/progress.py",
    "iad/frontend/components/charts.py",
    # Optional heavy dependency — exercised in integration when installed
    "iad/ml/automl/pycaret_adapter.py",
    "iad/frontend/styles/theme.py",
    "iad/frontend/components/tables.py",
    "iad/frontend/components/model_cards.py",
    "iad/frontend/components/alerts.py",
    "iad/frontend/components/metric_cards.py",
    "iad/frontend/performance/*",
    # Phase 11 optional-dependency probes and heavy backends (tested when installed)
    "iad/ml/forecasting/prophet_model.py",
    "iad/ml/forecasting/availability.py",
    "iad/ml/clustering/availability.py",
    "iad/ml/nlp/availability.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Ruff (Phase 10 will harden this further)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "notebooks", "src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = [
    "E501",   # formatter handles line length
    "N803",   # sklearn convention: X, y feature matrices
    "N806",   # uppercase ML variables in notebooks-style code
    "N812",   # version import alias
    "N818",   # IADError naming is intentional platform branding
    "UP042",  # str+Enum enums; migrate to StrEnum in a dedicated pass
    "C408",   # plotly layout kwargs conventionally use dict()
    "SIM108", # readability over ternary in ML branches
    "SIM105", # explicit try/except in job polling
    "SIM103",
    "B905",
    "SIM118",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "SIM117"]  # pytest.raises(Exception) is intentional in places
"iad/ml/explainability/**" = ["N812"]  # SHAP as shap
"iad/backend/api/routes/ml.py" = ["B008"]  # FastAPI File/Depends defaults

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
packages = ["iad"]
strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    "\\.venv/",
    "iad/backend/database/migrations/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "iad.ml.tracking.mlflow_tracker",
    "iad.ml.automl.flaml_adapter",
    "iad.frontend.layouts.dashboard",
    "iad.ml.training.reports",
    "iad.performance.loader",
    "iad.performance.polars_io",
    "iad.frontend.services.dataset",
    "iad.frontend.components.tables",
    "iad.frontend.styles.theme",
    "src.*",
]
ignore_errors = true
